# orbit_console_nextjs_tests

./: .env.example  .gitignore  README.md  conftest.py  package.json  playwright.config.ts  pyproject.toml  requirements.txt
e2e/: auth.spec.ts  cloud-jobs.spec.ts  navigation.spec.ts  test_auth.py  test_cloud_jobs.py  test_navigation.py
scripts/: run_api_tests.sh  run_e2e.sh
tests/: test_console_api.py
